[gd_scene load_steps=53 format=2]

[ext_resource path="res://scenes/characters/enemies/SmalliesMeleeState.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/enemies/SmalliesMelee.gd" type="Script" id=3]
[ext_resource path="res://scenes/characters/enemies/EnemyHurtbox.gd" type="Script" id=4]
[ext_resource path="res://scenes/characters/enemies/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/sprite_smallie-character---attack.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/sprite_smallie-character---running.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/sprite_smallie-character---death.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=46]
radius = 2.8467
height = 30.1822

[sub_resource type="CircleShape2D" id=3]
radius = 112.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 8 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "running",
"speed": 5.0
} ]

[node name="SmalliesMelee" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 3 )
max_speed = 200.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 100.0

[node name="SmalliestMeleeState" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
rotation = -1.56059
shape = SubResource( 46 )

[node name="DetectionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
shape = SubResource( 3 )

[node name="EnemyHurtbox" type="Area2D" parent="." groups=["hittable"]]
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 64

[node name="Pivot" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="Pivot"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitBox"]
position = Vector2( 0, -24 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
modulate = Color( 0.92549, 0.815686, 0.0941176, 1 )
position = Vector2( 0, -24 )
frames = SubResource( 5 )
animation = "running"

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="ShootInterval" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="DetectionBox" to="." method="_on_DetectionBox_body_entered"]
[connection signal="hit" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_hit"]
[connection signal="area_entered" from="Pivot/HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="Pivot/HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="animation_finished" from="Pivot/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="Pivot/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ShootInterval" to="." method="_on_ShootInterval_timeout"]
